
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct vm_area_struct {unsigned long vm_start; unsigned long vm_end; int vm_flags; int anon_vma; } ;
struct mm_struct {int dummy; } ;
typedef int pgd_t ;


 int ENOMEM ;
 int VM_HUGETLB ;
 int VM_INSERTPAGE ;
 int VM_NONLINEAR ;
 int VM_PFNMAP ;
 int copy_hugetlb_page_range (struct mm_struct*,struct mm_struct*,struct vm_area_struct*) ;
 int copy_pud_range (struct mm_struct*,struct mm_struct*,int *,int *,struct vm_area_struct*,unsigned long,unsigned long) ;
 scalar_t__ is_cow_mapping (int) ;
 int is_pfn_mapping (struct vm_area_struct*) ;
 scalar_t__ is_vm_hugetlb_page (struct vm_area_struct*) ;
 int mmu_notifier_invalidate_range_end (struct mm_struct*,unsigned long,unsigned long) ;
 int mmu_notifier_invalidate_range_start (struct mm_struct*,unsigned long,unsigned long) ;
 unsigned long pgd_addr_end (unsigned long,unsigned long) ;
 scalar_t__ pgd_none_or_clear_bad (int *) ;
 int * pgd_offset (struct mm_struct*,unsigned long) ;
 int track_pfn_vma_copy (struct vm_area_struct*) ;
 scalar_t__ unlikely (int ) ;

int copy_page_range(struct mm_struct *dst_mm, struct mm_struct *src_mm,
  struct vm_area_struct *vma)
{
 pgd_t *src_pgd, *dst_pgd;
 unsigned long next;
 unsigned long addr = vma->vm_start;
 unsigned long end = vma->vm_end;
 int ret;







 if (!(vma->vm_flags & (VM_HUGETLB|VM_NONLINEAR|VM_PFNMAP|VM_INSERTPAGE))) {
  if (!vma->anon_vma)
   return 0;
 }

 if (is_vm_hugetlb_page(vma))
  return copy_hugetlb_page_range(dst_mm, src_mm, vma);

 if (unlikely(is_pfn_mapping(vma))) {




  ret = track_pfn_vma_copy(vma);
  if (ret)
   return ret;
 }







 if (is_cow_mapping(vma->vm_flags))
  mmu_notifier_invalidate_range_start(src_mm, addr, end);

 ret = 0;
 dst_pgd = pgd_offset(dst_mm, addr);
 src_pgd = pgd_offset(src_mm, addr);
 do {
  next = pgd_addr_end(addr, end);
  if (pgd_none_or_clear_bad(src_pgd))
   continue;
  if (unlikely(copy_pud_range(dst_mm, src_mm, dst_pgd, src_pgd,
         vma, addr, next))) {
   ret = -ENOMEM;
   break;
  }
 } while (dst_pgd++, src_pgd++, addr = next, addr != end);

 if (is_cow_mapping(vma->vm_flags))
  mmu_notifier_invalidate_range_end(src_mm,
        vma->vm_start, end);
 return ret;
}
